--- a/app/src/main/res/layout/activity_tsfactivity.xml
+++ b/app/src/main/res/layout/activity_tsfactivity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fr.iut.tsf.ui.DataActivity">
+    tools:context="fr.iut.tsf.ui.FilmActivity">
 
     <FrameLayout
         android:id="@+id/id_fragment"
