--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="red">#F0514B</color>
+    <color name="text_black">#212121</color>
+    <color name="text_black_lighter">#727272</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -8,4 +11,17 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="tsfblue">#306FB6</color>
+
+    <color name="color0">@color/red</color>
+    <color name="color1">#FFAC40</color>
+    <color name="color2">#FFEE58</color>
+    <color name="color3">@color/white</color>
+    <color name="color4">@color/white</color>
+    <color name="color5">@color/white</color>
+    <color name="color6">#FFEE58</color>
+    <color name="color7">@color/white</color>
+    <color name="color8">#FFEE58</color>
+    <color name="color9">@color/white</color>
+    <color name="color10">@color/white</color>
+
 </resources>
