Modif detail vue fragment

--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -13,96 +13,65 @@
         android:padding="@dimen/activity_margin"
         tools:context=".ui.activity.DogActivity">
 
-        <androidx.constraintlayout.widget.Barrier
-            android:id="@+id/barrier"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:barrierDirection="right"
-            app:constraint_referenced_ids="text_overview,text_gender,text_measurement,text_aggressiveness"
-            tools:layout_editor_absoluteX="40dp"
-            tools:layout_editor_absoluteY="16dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/text_overview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="212dp">
 
-        <EditText
-            android:id="@+id/edit_dog_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="test"
-            android:importantForAutofill="no"
-            android:inputType="textCapWords"
-            app:layout_constraintBaseline_toBaselineOf="@+id/text_overview"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/barrier" />
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="181dp"
+                    android:layout_height="202dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@mipmap/tsf" />
 
-        <EditText
-            android:id="@+id/edit_dog_breed"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="test"
-            android:importantForAutofill="no"
-            android:inputType="textCapWords"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/barrier"
-            app:layout_constraintTop_toBottomOf="@+id/edit_dog_name" />
+                <TextView
+                    android:id="@+id/detailtitre"
+                    android:layout_width="151dp"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="28dp"
+                    android:fontFamily="monospace"
+                    android:text="TextView"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:typeface="normal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageView2"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.132" />
 
-        <TextView
-            android:id="@+id/text_gender"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_dog_breed" />
+                <TextView
+                    android:id="@+id/genre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    tools:layout_editor_absoluteX="209dp"
+                    tools:layout_editor_absoluteY="52dp" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            android:id="@+id/text_measurement"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test"
-            app:layout_constraintStart_toStartOf="parent" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp">
 
-        <EditText
-            android:id="@+id/edit_dog_weight"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="test"
-            android:importantForAutofill="no"
-            android:inputType="numberDecimal"
-            app:layout_constraintBaseline_toBaselineOf="@+id/text_measurement"
-            app:layout_constraintEnd_toStartOf="@id/label_weight_unit"
-            app:layout_constraintStart_toEndOf="@id/barrier" />
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="378dp"
+                    android:layout_height="115dp"
+                    android:fontFamily="monospace"
+                    android:text="TextView"
+                    android:textStyle="italic" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            android:id="@+id/label_weight_unit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test"
-            app:layout_constraintBaseline_toBaselineOf="@+id/text_measurement"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/edit_dog_weight" />
-
-        <TextView
-            android:id="@+id/text_aggressiveness"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="test"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_dog_weight" />
-
-        <RatingBar
-            android:id="@+id/ratingbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:numStars="3"
-            android:stepSize="1"
-            app:layout_constraintStart_toEndOf="@id/barrier"
-            app:layout_constraintTop_toTopOf="@+id/text_aggressiveness" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
