--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/activity_margin"
+        android:padding="2dp"
         tools:context=".ui.activity.DogActivity">
 
         <LinearLayout
@@ -20,12 +20,12 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="212dp">
+                android:layout_height="268dp">
 
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="181dp"
-                    android:layout_height="202dp"
+                    android:layout_width="195dp"
+                    android:layout_height="253dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -35,8 +35,8 @@
 
                 <TextView
                     android:id="@+id/detailtitre"
-                    android:layout_width="151dp"
-                    android:layout_height="24dp"
+                    android:layout_width="161dp"
+                    android:layout_height="109dp"
                     android:layout_marginStart="28dp"
                     android:fontFamily="monospace"
                     android:text="TextView"
@@ -52,9 +52,13 @@
                     android:id="@+id/genre"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:text="TextView"
-                    tools:layout_editor_absoluteX="209dp"
-                    tools:layout_editor_absoluteY="52dp" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.2"
+                    app:layout_constraintStart_toEndOf="@+id/imageView2"
+                    app:layout_constraintTop_toBottomOf="@+id/detailtitre"
+                    tools:ignore="MissingConstraints" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -65,10 +69,12 @@
                 <TextView
                     android:id="@+id/description"
                     android:layout_width="378dp"
-                    android:layout_height="115dp"
+                    android:layout_height="140dp"
                     android:fontFamily="monospace"
                     android:text="TextView"
-                    android:textStyle="italic" />
+                    android:textStyle="italic"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    tools:ignore="MissingConstraints" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
