--- a/app/src/main/res/layout/adaptateur_contenu.xml
+++ b/app/src/main/res/layout/adaptateur_contenu.xml
@@ -21,22 +21,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/activity_margin">
+            android:padding="0dp">
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:srcCompat="@mipmap/tsf" />
-
-            <TextView
-                android:id="@+id/titre"
-                android:layout_width="357dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:textColor="@color/black"
-                android:text="@{film.title}"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
