--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="tsfblue">#306FB6</color>
+    <color name="tsfblue">#7594B8</color>
+    <color name="truetsfblue">#FF306FB6</color>
 
     <color name="color0">@color/red</color>
     <color name="color1">#FFAC40</color>
