--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -15,14 +15,14 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_dog"
+        android:id="@+id/searchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_margin="@dimen/activity_margin"
-        android:src="@mipmap/search"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:contentDescription="@string/cdfab" />
+        android:layout_margin="16dp"
+        android:contentDescription="Rien"
+        app:backgroundTint="@color/tsfblue"
+        app:rippleColor="#FFFFFF"
+        app:srcCompat="@drawable/logo_tsf_ft" />
 
 </FrameLayout>
