--- a/app/src/main/res/layout/adaptateur_contenu.xml
+++ b/app/src/main/res/layout/adaptateur_contenu.xml
@@ -17,7 +17,7 @@
         app:cardUseCompatPadding="true">
 
         <LinearLayout
-            android:id="@+id/layout_cardview_dog"
+            android:id="@+id/layout_cardview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
